Add new file directories, added serialization for camps